--- a/css/foundation/6/sistory.css
+++ b/css/foundation/6/sistory.css
@@ -73,6 +73,10 @@ div.title-bar-left > a {
   border-color: transparent #FFFFFF transparent transparent;
   }
 
+.is-dropdown-submenu {
+  min-width: 400px;
+  }
+
 th {
     border:3px solid #333333;
 }
@@ -131,7 +135,7 @@ dt + dt::before {
   content: "\007C" " ";
 }
 dt + dd::before {
-  content: "\2014" " ";
+  content: "\003A" " ";
 }
 dd + dd::before {
   content: "\007C" " ";
